[package]
name = "cli"
version = "0.1.0"
edition = "2021"


[lib]
name = "currychain_cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
bls-signatures = "0.15.0"
clap = { version = "3.2.8", features = ["derive"] }
hex = "0.4.3"
rand = "0.8.5"
ripemd = "0.1.3"
serde_json = "1.0.113"
sha256 = "1.5.0"
blake2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
num-bigint = "0.4.4"
num = "0.4.1"
