[package]
name = "curry"
version = "0.1.0"
edition = "2021"

[lib]
name = "currychain"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base58 = "0.2.0"
blake2 = "0.10.6"
bls-signatures = "0.15.0"
clap = "4.4.18"
hex = "0.4.3"
rand = "0.8.5"
ripemd = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
sha256 = "1.5.0"
tokio = { version = "1", features = ["full"] }
